Empty libcassie shell

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,6 +23,7 @@ test-docs:
 	(cd docs && $(MAKE) test-docs)
 include libgenthrift/include.am
 include libcassandra/include.am
+include libcassie/include.am
 include tests/include.am
 
 TESTS += ${check_PROGRAMS}
@@ -59,6 +60,3 @@ lcov-clean: clean
 	rm -rf lcov */lcov.out 
 	find . -name '*.gcno' | xargs rm -f
 	find . -name '*.gcda' | xargs rm -f
-
-
-
