New cassie_blob to ease working with blobs

--- a/libcassie/include.am
+++ b/libcassie/include.am
@@ -8,6 +8,7 @@ EXTRA_DIST+= \
 nobase_include_HEADERS+= \
 			 libcassie/cassie.h \
 			 libcassie/cassie_types.h \
+			 libcassie/cassie_blob.h \
 			 libcassie/cassie_io_column.h \
 			 libcassie/cassie_column.h
 
@@ -15,6 +16,7 @@ lib_LTLIBRARIES+= libcassie/libcassie.la
 libcassie_libcassie_la_CXXFLAGS= ${AM_CXXFLAGS}
 libcassie_libcassie_la_SOURCES = \
 				       libcassie/cassie.cc \
+				       libcassie/cassie_blob.cc \
 				       libcassie/cassie_io_column.cc \
 				       libcassie/cassie_column.cc
 
